# agentic-tools

./: .ai-policy.json  .aiexclude  .gitignore  AGENTS.md  CHANGELOG.md  README.md  jest.config.mjs  package.json  pyproject.toml  tsconfig.node.json
.agents/: config.json  policy.json
.agents/skills/ai-security/: SKILL.md
.agents/skills/ref-agent-behavior/: SKILL.md
.agents/skills/ref-agent-local-tasks/: SKILL.md
.agents/skills/ref-agents-hooks/: SKILL.md
.agents/skills/ref-agents-instructions-authoring/: SKILL.md
.agents/skills/ref-agents-local-tasks/: SKILL.md
.agents/skills/ref-agents-persona/: SKILL.md
.agents/skills/ref-agents-security/: SKILL.md
.agents/skills/ref-ai-security/: SKILL.md
.agents/skills/ref-app-react-next/: SKILL.md
.agents/skills/ref-app-web-standalone/: SKILL.md
.agents/skills/ref-architecture/: SKILL.md
.agents/skills/ref-claude-instructions/: SKILL.md
.agents/skills/ref-code-conventions/: SKILL.md
.agents/skills/ref-coding-patterns/: SKILL.md
.agents/skills/ref-copilot-instructions/: SKILL.md
.agents/skills/ref-db-design-methodology/: SKILL.md
.agents/skills/ref-db-distributed/: SKILL.md
.agents/skills/ref-db-management/: SKILL.md
.agents/skills/ref-db-normalization/: SKILL.md
.agents/skills/ref-db-nosql/: SKILL.md
.agents/skills/ref-db-relational/: SKILL.md
.agents/skills/ref-db-security/: SKILL.md
.agents/skills/ref-deno/: SKILL.md
.agents/skills/ref-dev-package-management/: SKILL.md
.agents/skills/ref-docs-authoring/: SKILL.md
.agents/skills/ref-gemini-instructions/: SKILL.md
.agents/skills/ref-git-commits/: SKILL.md
.agents/skills/ref-github-actions-ci/: SKILL.md
.agents/skills/ref-github-dependabot/: SKILL.md
.agents/skills/ref-instructions-authoring/: SKILL.md
.agents/skills/ref-javascript/: SKILL.md
.agents/skills/ref-js-deno/: SKILL.md
.agents/skills/ref-js-javascript/: SKILL.md
.agents/skills/ref-js-next/: SKILL.md
.agents/skills/ref-js-react/: SKILL.md
.agents/skills/ref-js-typescript/: SKILL.md
.agents/skills/ref-js-userscript/: SKILL.md
.agents/skills/ref-local-feature-tracking/: SKILL.md
.agents/skills/ref-next/: SKILL.md
.agents/skills/ref-project-setup/: SKILL.md
.agents/skills/ref-project-structure-setup/: SKILL.md
.agents/skills/ref-projects-architecture/: SKILL.md
.agents/skills/ref-py-commitizen/: SKILL.md
.agents/skills/ref-python/: SKILL.md
.agents/skills/ref-react/: SKILL.md
.agents/skills/ref-shareable-skills/: SKILL.md
.agents/skills/ref-skills-authoring/: SKILL.md
.agents/skills/ref-sp-agents-categories/: SKILL.md
.agents/skills/ref-sp-agents-claude-marketplaces/: SKILL.md
.agents/skills/ref-sp-agents-hooks/: SKILL.md
.agents/skills/ref-sp-agents-instructions-authoring/: SKILL.md
.agents/skills/ref-sp-agents-local-tasks/: SKILL.md
.agents/skills/ref-sp-agents-mr-wolf-persona/: SKILL.md
.agents/skills/ref-sp-agents-persona/: SKILL.md
.agents/skills/ref-sp-agents-plugin-marketplaces/: SKILL.md
.agents/skills/ref-sp-agents-policy/: SKILL.md
.agents/skills/ref-sp-agents-security/: SKILL.md
.agents/skills/ref-sp-agents-shareable-skills/: SKILL.md
.agents/skills/ref-sp-agents-skills-authoring/: SKILL.md
.agents/skills/ref-sp-agents-skills-management/: SKILL.md
.agents/skills/ref-sp-agents-verification-discipline/: SKILL.md
.agents/skills/ref-sp-agents-verification-ladder/: SKILL.md
.agents/skills/ref-sp-baas-supabase/: SKILL.md
.agents/skills/ref-sp-db-design-methodology/: SKILL.md
.agents/skills/ref-sp-db-distributed/: SKILL.md
.agents/skills/ref-sp-db-management/: SKILL.md
.agents/skills/ref-sp-db-normalization/: SKILL.md
.agents/skills/ref-sp-db-nosql/: SKILL.md
.agents/skills/ref-sp-db-operations/: SKILL.md
.agents/skills/ref-sp-db-relational/: SKILL.md
.agents/skills/ref-sp-db-schema-design/: SKILL.md
.agents/skills/ref-sp-db-security/: SKILL.md
.agents/skills/ref-sp-dev-coding-patterns/: SKILL.md
.agents/skills/ref-sp-dev-docs-authoring/: SKILL.md
.agents/skills/ref-sp-dev-git-commits/: SKILL.md
.agents/skills/ref-sp-dev-github-actions-ci/: SKILL.md
.agents/skills/ref-sp-dev-github-dependabot/: SKILL.md
.agents/skills/ref-sp-dev-package-management/: SKILL.md
.agents/skills/ref-sp-dev-playwright-cli/: SKILL.md
.agents/skills/ref-sp-dev-project-folders/: SKILL.md
.agents/skills/ref-sp-dev-project-setup/: SKILL.md
.agents/skills/ref-sp-dev-projects-architecture/: SKILL.md
.agents/skills/ref-sp-dev-repo-conventions/: SKILL.md
.agents/skills/ref-sp-dev-semantic-versioning/: SKILL.md
.agents/skills/ref-sp-js-deno/: SKILL.md
.agents/skills/ref-sp-js-javascript/: SKILL.md
.agents/skills/ref-sp-js-next/: SKILL.md
.agents/skills/ref-sp-js-next-template/: SKILL.md
.agents/skills/ref-sp-js-react/: SKILL.md
.agents/skills/ref-sp-js-react-next/: SKILL.md
.agents/skills/ref-sp-js-typescript/: SKILL.md
.agents/skills/ref-sp-js-userscript/: SKILL.md
.agents/skills/ref-sp-js-web-standalone/: SKILL.md
.agents/skills/ref-sp-js-web-standalone-template/: SKILL.md
.agents/skills/ref-sp-platform-supabase/: SKILL.md
.agents/skills/ref-sp-py-code-conventions/: SKILL.md
.agents/skills/ref-sp-web-seo/: SKILL.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  release.yaml
node/lib/: agents-policy.js  common.js  skills-management.js
node/test/: agents-policy.test.js  skills-management.test.js
scripts/: agentic-tools.mjs  agents-policy-import-vscode.mjs  agents-policy.mjs  check_version_drift.py  check_version_drift_test.py  init_project.py  skills-management.mjs
src/agentic_tools/: README.md  __init__.py  main.mjs  main.py  main.test.mjs
src/agentic_tools_old/: README.md  main.mjs  main.py  main_test.py
src/i18n/: README.md  catalog.py  catalog_test.py  errors.py  interpolation.py  interpolation_test.py  locale_tags.py  locale_tags_test.py  main.py  main_test.py  translator.py  types.py
src/swiftpost_shareable_skills/: main.py  main_test.py
(+360 files in other folders)
