[project]
name = "agentic-tools"
version = "0.1.0"
description = ""
authors = [{ name = "swiftpost", email = "swiftpostlab@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = []

[dependency-groups]
dev = [
  "poethepoet>=0.34.0",
  "pytest>=9.0",
  "black>=25.1.0",
  "pyright>=1.1.400",
  "json5>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_tools", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
".agents/skills" = "agentic_tools/shareable_skills"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--import-mode=importlib"
testpaths = ["src", "scripts"]
python_files = ["*_test.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["**/__pycache__", "src/typings"]
stubPath = "src/typings"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberAccess = "warning"
reportUnknownMemberType = "none"
reportUnknownModuleType = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[project.scripts]
main = "agentic_tools.main:main"
agents-policy = "agentic_tools.agents_policy.main:main"
agents-policy-import-vscode = "agentic_tools.agents_policy.main:import_vscode_main"
sync-ai-policy = "agentic_tools.agents_policy.main:main"
sync-ai-policy-import-vscode = "agentic_tools.agents_policy.main:import_vscode_main"
skills-management-cli = "agentic_tools.skills_management.main:main"
skills-management = "agentic_tools.skills_management.main:main"

[tool.poe.tasks]
policy-check = "python -m agentic_tools.agents_policy.main --check"
py-lint = "python -m black --check ./src"
lint = ["policy-check", "py-lint"]
lint-fix = "python -m black ./src"
typecheck = "python -m pyright ./src"
test = "python -m pytest"
# --- AI Secure Parameterized Tasks ---
lint-filter = { help = "Run linter and filter output", shell = "python -m black --check ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
typecheck-filter = { help = "Run typechecker and filter output", shell = "python -m pyright ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
