[project]
name = "agentic-tools"
version = "0.1.0"
description = ""
authors = [{ name = "swiftpost", email = "swiftpostlab@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = ["json5>=0.14.0", "pydantic>=2.13.4", "typer>=0.26.1"]

[dependency-groups]
dev = [
  "poethepoet>=0.34.0",
  "pytest>=9.0",
  "black>=25.1.0",
  "pyright>=1.1.400",
  "commitizen>=4.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_tools", "src/agentic_tools_old", "src/i18n", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
".agents/skills" = "agentic_tools_old/shareable_skills"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--import-mode=importlib"
testpaths = ["src", "scripts"]
python_files = ["*_test.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["**/__pycache__", "src/typings"]
stubPath = "src/typings"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_scheme = "semver2"
version_files = [
    "package.json:version",
    "VERSION",
    ".claude-plugin/plugin.json:version",
    ".claude-plugin/marketplace.json:version",
]
changelog_file = "CHANGELOG.md"
major_version_zero = true
bump_message = "chore(release): $current_version -> $new_version"
tag_format = "v$version"

[project.scripts]
agentic-tools = "agentic_tools_old.main:main"

[tool.poe.tasks]
policy-check = "uv run python -m agentic_tools_old.main policy check"
version-check = "python scripts/check_version_drift.py check"
plugin-sync = "python -m agentic_tools.main.cli plugin sync"
plugin-check = "python -m agentic_tools.main.cli plugin check"
version-next = "cz bump --get-next --yes"
release-prepare-preview = { help = "Preview the next Commitizen-managed release bump without changing files", shell = "cz bump --dry-run --check-consistency --allow-no-commit --increment ${part} --yes", args = [
  { name = "part", positional = true, required = true },
] }
release-prepare = { help = "Create the Commitizen release commit, changelog entry, and tag for the selected stable bump; requires an existing baseline release tag", shell = "cz bump --check-consistency --allow-no-commit --increment ${part} --changelog --yes", args = [
  { name = "part", positional = true, required = true },
] }
release-publish-python = "uv build && uv publish"
release-publish-node = "npm publish"
release-publish = ["release-publish-python", "release-publish-node"]
py-lint = "python -m black --check ./src"
lint = ["policy-check", "version-check", "plugin-check", "py-lint"]
lint-fix = "python -m black ./src"
lint-focused = { help = "Check formatting for selected paths", shell = "python -m black --check ${paths}", args = [
  { name = "paths", positional = true, required = true, multiple = true },
] }
typecheck = "python -m pyright ./src"
typecheck-focused = { help = "Run Pyright for selected paths", shell = "python -m pyright ${paths}", args = [
  { name = "paths", positional = true, required = true, multiple = true },
] }
test = "python -m pytest"
test-focused = { help = "Run pytest for selected paths", shell = "python -m pytest ${paths}", args = [
  { name = "paths", positional = true, required = true, multiple = true },
] }
# --- AI Secure Parameterized Tasks ---
lint-filter = { help = "Run linter and filter output", shell = "python -m black --check ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
typecheck-filter = { help = "Run typechecker and filter output", shell = "python -m pyright ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
